# Guided-Emergency-Evacuation-DRL

./: .gitignore  EXIT_BUG_FIX_EXPLANATION.md  LICENSE  MIGRATION_GUIDE.md  OBSTACLE_VISUALIZATION_FIX.md  QUICKSTART.md  README.md  REFACTORING.md  TF_VS_PYTORCH.md  examples.py  pyproject.toml  quick_visualize.py  run.sh  run_guided_visualize.py  setup_and_run.sh  test_evacuation_fix.py  test_performance.py  train_guide.py  visualize_evacuation.py
archive/: README.md
archive/debug_files/: debug_dis_lim.py  debug_exit_issue.py  test_evacuation_fix.py  test_knn_filtering.py  test_obstacle_visualization.py
archive/smart_agents/: __init__.py  dqn_network.py  test.py
config/: README.md  large_scale.json  simulation_config backup.json  simulation_config.json  single_exit.json  with_obstacles.json
evacuation_rl/: __init__.py  __main__.py
evacuation_rl/agents/: __init__.py  actor_critic.py
evacuation_rl/agents/guided_agents/: __init__.py  environment.py
evacuation_rl/agents/smart_agents/: test.py  train_3exits_obstacles.py  train_4exits.py
evacuation_rl/conformal/: __init__.py  space.py  value.py
evacuation_rl/environments/: __init__.py  cellspace.py
evacuation_rl/utils/: __init__.py  config_loader.py  simulation.py  visualization.py
