[project]
name = "emergency-evacuation-deep-reinforcement-learning"
version = "0.2.0"
description = "Emergency Evacuation Simulation using Deep Reinforcement Learning (PyTorch)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
]

[tool.uv.sources]
    torch = [{index="torch-cu126"}]


[[tool.uv.index]]
name = "torch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true